--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <style>
+      html, body, #app {
+        height: 100%;
+      }
+    </style>  
   </body>
 </html>
